# Obsidian-Kindle-Highlgights

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: sync_highlights.py
src/highlights/: __init__.py  config.py  gui.py  markdown.py  models.py  parsers.py  storage.py
src/highlights/fetchers/: __init__.py  kindle_cloud.py
tests/: test_kindle_cloud_fetcher.py  test_markdown.py  test_parsers.py  test_storage.py
