[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-kindle-highlights"
version = "0.1.0"
description = "Sync Kindle highlights into an Obsidian vault."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
http = ["requests>=2.31"]

[tool.setuptools.packages.find]
where = ["src"]
